--- a/page-and-products-css-code.css
+++ b/page-and-products-css-code.css
@@ -19,6 +19,10 @@
     padding-left: 10px;
     padding-right: 10px;
 }
+.woocommerce ul.products li.owp-content-center .product-inner {
+  text-align: center;
+  box-shadow: 0 0 68px 0 rgba(174,175,175,.17);
+}
 .woocommerce ul.products .product-inner {
   height: 100% !important;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.04);
